@@ -118,6 +118,7 @@ SVN trunk (1.1.x):
    * campaign_list response now contains the time the request was processed
    * campaign_list response now contains information about translations
    * fixed problem with duplicate translations being saved with each upload
+   * added a passphrass change function
  * utils
    * added weblist.pl and webtgz.pl web interface programs
    * changed wml.pm to use substr instead of split to convert string to array:
@@ -125,6 +126,8 @@ SVN trunk (1.1.x):
    * changed wml_net.pm to insert into preallocated string instead of
      appending: should save memory and time, but not benchmarked
    * added prkill script, to calculate probabilities to kill in a skirmish
+   * added campaign_passphrase.pl for changing passphrases
+   * added campaign_delete.pl for deleing campaigns
  * WML improvements:
    * added swarm attack special
    * random map generator now uses island_size (#4458)
